attempt at using auto-plugin, settled with just renaming the proguard task.