@@ -8,15 +8,3 @@ name := "sbt-proguard"
 version := "0.2.3-SNAPSHOT"
 
 publishMavenStyle := false
-
-publishTo <<= isSnapshot { snapshot =>
-  if (snapshot) Some(Classpaths.sbtPluginSnapshots) else Some(Classpaths.sbtPluginReleases)
-}
-
-crossBuildingSettings
-
-CrossBuilding.crossSbtVersions := Seq("0.12", "0.13")
-
-CrossBuilding.scriptedSettings
-
-scriptedLaunchOpts := Seq("-Xms512m", "-Xmx512m", "-XX:MaxPermSize=256m")
